# bc-src

./: .gitignore  .version.json  Dockerfile.gpu-build  README.md  build-cuda.sh  build-grpc.sh  build-rust.sh  buildenv  package-lock.json  package.json  protos-package-revert.sh  start-gpu.sh  start.sh  start_gpu.sh
_tools/: build-rust.sh  export-db.sh
apiglue/: generate_grpc.sh  setup.py
apiglue/apiglue/: __init__.py  example_block.py  grpc_reformatter.py  version.py
apiglue/scripts/: apiglue
bc-miner-cuda/: Makefile
bc-miner-cuda/src/: bc_miner.cu  main.cpp
config/: CHANGELOG.md  config.json  goodpeers.txt  meansalot.txt
cuda-miner/: CMakeLists.txt  Dockerfile.gpu-build  Makefile  allow-native-miner.sh  build-cuda.sh  buildenv-cuda  keep_alive_miner_cuda.sh  start-gpu.sh  start_gpu.sh
cuda-miner/docker/: Dockerfile  Dockerfile.bcnode  Dockerfile.gpuminer  README.md  docker-entrypoint.sh  start-gpu.sh  start.sh
cuda-miner/docker/bcnode/: docker-entrypoint.sh  monkey-patch
cuda-miner/src/: BCGPUMiner.cc  BCGPUMiner.h  CallData.cc  CallData.h  bc_miner.cu  bc_miner.h  blake2b.cu  cos_dist.cu  main.cpp  main.cu
data/: binance_connect_example.mjs
docker/: Dockerfile
fanout/: setup.py
fanout/bcfanout/: __init__.py  bcfanout.py
fanout/scripts/: bcfanout
lib/bc/: at_genesis_balances.csv  blockchainmanager.js  bootblock.js  chainstate.js  data.js  dex.js  genesis.js  genesis.raw.js  helper.js  index.js  minerNative.js  multiverse.js  timecapsule.raw.js  tokenDictionary.js  txPendingPool.js  unsettledTxManagerAlt.js  util.js  utxoManager.js  validation.js  vanity.js  wallet.js
lib/cli/: main.js  minerKey.js
lib/config/: counterparty.js  evmData.js  index.js  networks.js
lib/core/: coin.js  txUtils.js
lib/crypto/: blorr.js  (+4 more)
protos/: bc.proto  core.proto  db.proto  miner.proto  p2p.proto  rover.proto  wireless.proto
public/: index.html  style.css
src/: protos
(+188 files in other folders)
